	* Plugins can now handle markup in buddy names by attaching to the
	  "drawing-buddy" signal. (Daniele Ricci, Andrea Piccinelli)
	* Be more accommodating when scaling down large images for use as
	  buddy icons.
	* The 'Message Timestamp Formats' plugin allows changing the timestamp
	  format from the timestamps' context menu in conversation log.
	* Fix pastes from Chrome (rich-text pastes and probably URLs
	  having garbage appended to them)

	Bonjour:
	* Added support for IPv6. (Thanks to T_X for testing)

	Gadu-Gadu:
	* Updated our bundled libgadu to 1.9.0-rc2 (many thanks to Krzysztof
	  Klinikowski for the work and testing put in here!)
	* Minimum requirement for external libgadu is now also 1.9.0-rc2.

	AIM and ICQ:
	* X-Status (Custom ICQ status icon) support.  Since most of the icons
	  available reflect moods, this is labeled "Set Mood" on the
	  Accounts->ICQ Account menu. (Andrew Ivanov, Tomáš Kebert,
	  Yuriy Yevgrafov, and trac users bob007, salieff, and nops)
	* Allow setting and displaying icons between 1x1 and 100x100 pixels for
	  ICQ.  Previously only icons between 48x48 and 52x64 were allowed.
	* When using the clientLogin authentication method, prompt for a
	  password on reconnect when "Remember Password" is not checked and
	  authentication fails due to an incorrect password.  (This is the same
	  behavior as the legacy authentication method)
	* Support sending and receiving HTML-formatted messages for ICQ.

	MSN:
	* Support for version 9 of the MSN protocol has been removed.  This
	  version is no longer supported on the servers.

	XMPP:
	* Direct messages to a specific resource only upon receipt of a message
	  with content (as opposed to a typing notification, etc).  (Thanks to
	  rjoly for testing)
	* Present a better error message when authentication fails while trying
	  to connect to Facebook.  (David Reiss, Facebook)
	* When sending data using in-band-bytestreams, interpret the block-size